--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,20 @@
-# --- General ---
-.DS_Store
+# Python
+__pycache__/
+*.py[cod]
+*.egg-info/
+*.eggs/
+*.pytest_cache/
 .env
-.env.*
+.venv/
+venv/
 
-# --- Python / Backend ---
-backend/.venv/
-backend/__pycache__/
-backend/**/__pycache__/
-backend/*.pyc
-backend/.pytest_cache/
-backend/.mypy_cache/
-
-# --- Alembic ---
-backend/alembic/versions/__pycache__/
-
-# --- Node / Frontend ---
+# Node/Frontend
+node_modules/
 frontend/node_modules/
-frontend/dist/
-frontend/.vite/
-frontend/npm-debug.log*
-frontend/yarn-error.log*
+dist/
+build/
 
-# --- Logs ---
-*.log
-
+# Editors/OS
+.DS_Store
+.idea/
+.vscode/
