--- a/backend/requirements.lock.txt
+++ b/backend/requirements.lock.txt
@@ -24,6 +24,7 @@ MarkupSafe==3.0.3
 mdurl==0.1.2
 orjson==3.11.5
 passlib==1.7.4
+pillow==10.4.0
 psycopg==3.2.1
 psycopg-binary==3.2.1
 psycopg2-binary==2.9.9
@@ -37,6 +38,7 @@ python-dotenv==1.0.1
 python-jose==3.3.0
 python-multipart==0.0.21
 PyYAML==6.0.3
+reportlab==4.1.0
 rich==14.2.0
 rich-toolkit==0.17.1
 rsa==4.9.1
