Fix shipment/orderstatus migration and add reportlab dependency

--- a/backend/requirements.lock.txt
+++ b/backend/requirements.lock.txt
@@ -4,6 +4,7 @@ anyio==4.12.1
 bcrypt==3.2.2
 certifi==2026.1.4
 cffi==2.0.0
+charset-normalizer==3.4.4
 click==8.3.1
 cryptography==46.0.3
 dnspython==2.8.0
@@ -24,7 +25,7 @@ MarkupSafe==3.0.3
 mdurl==0.1.2
 orjson==3.11.5
 passlib==1.7.4
-pillow==10.4.0
+pillow==12.1.0
 psycopg==3.2.1
 psycopg-binary==3.2.1
 psycopg2-binary==2.9.9
@@ -38,7 +39,7 @@ python-dotenv==1.0.1
 python-jose==3.3.0
 python-multipart==0.0.21
 PyYAML==6.0.3
-reportlab==4.1.0
+reportlab==4.4.9
 rich==14.2.0
 rich-toolkit==0.17.1
 rsa==4.9.1
