--- a/backend/alembic.ini
+++ b/backend/alembic.ini
@@ -1,7 +1,7 @@
 [alembic]
 script_location = alembic
 prepend_sys_path = .
-sqlalchemy.url = postgresql+psycopg://fnc:20251212@localhost:5432/FNC
+sqlalchemy.url = driver://user:pass@localhost/dbname
 
 [logging]
 log_level = INFO
